# ARMAssemblyEmulatorWithC

./: .gitignore  CMakeLists.txt
src/: ArmEmulator.c
